<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/invitation_requested_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"

        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/invitation_requested_text"

        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/requester_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/requester_name"

        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/invitation_requested_text" />

    <TextView
        android:id="@+id/requester_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/requester_email"

        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/requester_name" />

    <LinearLayout
        android:id="@+id/buttonHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"

        app:layout_constraintTop_toBottomOf="@+id/requester_email"
        >

        <Button
            android:id="@+id/acceptButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@color/acceptButton"

            android:layout_weight="1"

            android:text="@string/acceptButtonText"

            android:layout_marginEnd="16dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/rejectButton"
            />

        <Button
            android:id="@+id/rejectButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@color/rejectButton"

            android:layout_weight="1"

            android:text="@string/rejectButtonText"

            android:layout_marginStart="16dp"

            app:layout_constraintStart_toEndOf="@+id/acceptButton"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>